kubernetes/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: local-linker-backend-service
  namespace: local-linker
spec:
  selector:
    app: local-linker-backend
  type: NodePort
  ports:
  - port: 4000
    targetPort: 4000
