kubernetes/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: local-linker-redis-service
  namespace: local-linker
spec:
  type: ClusterIP
  selector:
    app: local-linker-redis
  ports:
  - port: 6379
    targetPort: 6379
