kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-linker-ingress
  namespace: local-linker
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: local-linker.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: local-linker-frontend-service
                port:
                  number: 5173
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: local-linker-backend-service
                port:
                  number: 4000
